- fixed slider overlapping datepicker

--- a/client/css/base.sass
+++ b/client/css/base.sass
@@ -93,3 +93,7 @@ button, a
 
   .has-error .help-block
     padding-top: 24px
+
+
+.ui-datepicker
+  z-index: 4!important
